--- a/Peek/Base.lproj/Main.storyboard
+++ b/Peek/Base.lproj/Main.storyboard
@@ -532,7 +532,7 @@ If you have concerns about the way Peek is handling your Information, please let
         <scene sceneID="TWp-Hg-9Sn">
             <objects>
                 <tableViewController id="v4G-UX-vZT" customClass="PeekListTableViewController" customModule="Peek" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" rowHeight="516" sectionHeaderHeight="18" sectionFooterHeight="18" id="7Qp-lS-cam">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="516" sectionHeaderHeight="18" sectionFooterHeight="18" id="7Qp-lS-cam">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.65005302498086581" green="0.79883803934010156" blue="0.68495621118587569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -543,7 +543,7 @@ If you have concerns about the way Peek is handling your Information, please let
                                 <rect key="frame" x="0.0" y="56" width="375" height="516"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OTS-hB-8nl" id="fqG-iv-Uxx">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="515.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="516"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DZM-wX-QdW">
@@ -752,7 +752,7 @@ If you have concerns about the way Peek is handling your Information, please let
         <scene sceneID="Nqi-jn-3d0">
             <objects>
                 <tableViewController storyboardIdentifier="CommentsTableViewController" id="vpC-iT-NqJ" customClass="CommentsTableViewController" customModule="Peek" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="72" sectionHeaderHeight="18" sectionFooterHeight="18" id="Yi9-zp-Mza">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="87" sectionHeaderHeight="18" sectionFooterHeight="18" id="Yi9-zp-Mza">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -793,22 +793,22 @@ If you have concerns about the way Peek is handling your Information, please let
                             </constraints>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentCell" textLabel="KkI-O0-oz9" detailTextLabel="j5E-Qe-mUK" rowHeight="72" style="IBUITableViewCellStyleSubtitle" id="9XU-7U-QL3">
-                                <rect key="frame" x="0.0" y="100" width="375" height="72"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentCell" textLabel="KkI-O0-oz9" detailTextLabel="j5E-Qe-mUK" rowHeight="87" style="IBUITableViewCellStyleSubtitle" id="9XU-7U-QL3">
+                                <rect key="frame" x="0.0" y="100" width="375" height="87"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9XU-7U-QL3" id="cM0-ni-0Sq">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="71"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="87"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KkI-O0-oz9">
-                                            <rect key="frame" x="15" y="17" width="30" height="21"/>
+                                            <rect key="frame" x="15" y="25" width="30" height="21"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="j5E-Qe-mUK">
-                                            <rect key="frame" x="15" y="38" width="30" height="16"/>
+                                            <rect key="frame" x="15" y="46" width="30" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="11"/>
                                             <color key="textColor" red="0.52131583121827418" green="0.52131583121827418" blue="0.52131583121827418" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -832,7 +832,7 @@ If you have concerns about the way Peek is handling your Information, please let
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DAD-HE-kqp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4366" y="-580"/>
+            <point key="canvasLocation" x="4365.6000000000004" y="-580.65967016491754"/>
         </scene>
         <!--Post Image-->
         <scene sceneID="Q1j-0d-Ukh">
