--- a/Peek/Base.lproj/Main.storyboard
+++ b/Peek/Base.lproj/Main.storyboard
@@ -8,7 +8,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Segues with Peek and Pop" minToolsVersion="7.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -589,7 +588,7 @@ If you have concerns about the way Peek is handling your Information, please let
                                                 <constraint firstAttribute="height" constant="53" id="IGJ-0G-Ku4"/>
                                                 <constraint firstAttribute="width" constant="223" id="ZKM-MP-KEe"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -629,10 +628,7 @@ If you have concerns about the way Peek is handling your Information, please let
                                     <outlet property="peekImageView" destination="7gS-XZ-k3n" id="Pdj-oM-G1a"/>
                                     <outlet property="peekTimeLabel" destination="DZM-wX-QdW" id="mE7-ob-Dhz"/>
                                     <outlet property="peekTitleLabel" destination="fuz-8D-oCA" id="nF1-L3-de5"/>
-                                    <segue destination="vpC-iT-NqJ" kind="show" identifier="toComments" id="qVz-1W-1ME">
-                                        <segue key="commit" inheritsFrom="parent" id="YNL-Vv-puD"/>
-                                        <segue key="preview" inheritsFrom="commit" id="W6W-zr-L7O"/>
-                                    </segue>
+                                    <segue destination="vpC-iT-NqJ" kind="show" identifier="toComments" id="qVz-1W-1ME"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -649,7 +645,7 @@ If you have concerns about the way Peek is handling your Information, please let
                             </connections>
                         </barButtonItem>
                         <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="7ZB-fp-osA">
-                            <rect key="frame" x="113" y="7" width="150" height="30"/>
+                            <rect key="frame" x="100" y="7" width="175" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <segments>
                                 <segment title="Newest"/>
@@ -801,14 +797,14 @@ If you have concerns about the way Peek is handling your Information, please let
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KkI-O0-oz9">
-                                            <rect key="frame" x="15" y="25" width="30" height="21"/>
+                                            <rect key="frame" x="15" y="26" width="29.5" height="20.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="j5E-Qe-mUK">
-                                            <rect key="frame" x="15" y="46" width="30" height="16"/>
+                                            <rect key="frame" x="15" y="46.5" width="30" height="15.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="11"/>
                                             <color key="textColor" red="0.52131583121827418" green="0.52131583121827418" blue="0.52131583121827418" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1155,7 +1151,7 @@ Our Service allows you to post, upload images, share information, and otherwise 
                                         <rect key="frame" x="0.0" y="35" width="375" height="69"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="boC-Ms-4xS" id="f1v-Wp-Ori">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="68"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="What's on your mind?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hek-9m-4rF">
@@ -1181,7 +1177,7 @@ Our Service allows you to post, upload images, share information, and otherwise 
                                         <rect key="frame" x="0.0" y="140" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dgz-v3-M6e" id="zfB-TU-Prq">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3d6-nI-l5k">
@@ -1242,7 +1238,6 @@ Our Service allows you to post, upload images, share information, and otherwise 
         <image name="text icon" width="99" height="99"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="qVz-1W-1ME"/>
         <segue reference="RTB-sh-fD8"/>
     </inferredMetricsTieBreakers>
 </document>
