--- a/Peek/Base.lproj/Main.storyboard
+++ b/Peek/Base.lproj/Main.storyboard
@@ -160,7 +160,7 @@ If you have any questions about these Terms, please contact us at peek app.conta
             <objects>
                 <navigationController storyboardIdentifier="mainVC" automaticallyAdjustsScrollViewInsets="NO" id="iE3-Ad-ohV" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="D8V-IH-HLF">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="D8V-IH-HLF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -534,7 +534,7 @@ If you have concerns about the way Peek is handling your Information, please let
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="516" sectionHeaderHeight="18" sectionFooterHeight="18" id="7Qp-lS-cam">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.65005302498086581" green="0.79883803934010156" blue="0.68495621118587569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.87747237589436011" green="0.89875475888324874" blue="0.88719668599148982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="separatorColor" red="0.79215686269999996" green="0.79971140620000003" blue="0.82039231059999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                         <prototypes>
@@ -588,7 +588,7 @@ If you have concerns about the way Peek is handling your Information, please let
                                                 <constraint firstAttribute="height" constant="53" id="IGJ-0G-Ku4"/>
                                                 <constraint firstAttribute="width" constant="223" id="ZKM-MP-KEe"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                            <fontDescription key="fontDescription" name="EuphemiaUCAS" family="Euphemia UCAS" pointSize="16"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -797,14 +797,14 @@ If you have concerns about the way Peek is handling your Information, please let
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KkI-O0-oz9">
-                                            <rect key="frame" x="15" y="26" width="29.5" height="20.5"/>
+                                            <rect key="frame" x="15" y="25" width="30" height="21"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="j5E-Qe-mUK">
-                                            <rect key="frame" x="15" y="46.5" width="30" height="15.5"/>
+                                            <rect key="frame" x="15" y="46" width="30" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="11"/>
                                             <color key="textColor" red="0.52131583121827418" green="0.52131583121827418" blue="0.52131583121827418" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1032,7 +1032,7 @@ Our Service allows you to post, upload images, share information, and otherwise 
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4SB-nV-Z88" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VAq-eC-TvY">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="VAq-eC-TvY">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -1105,7 +1105,7 @@ Our Service allows you to post, upload images, share information, and otherwise 
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="d7o-Fg-nyx" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oRo-FV-nVY">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="oRo-FV-nVY">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -1123,7 +1123,7 @@ Our Service allows you to post, upload images, share information, and otherwise 
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="yvB-vw-jmj" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0jv-13-eDt">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="0jv-13-eDt">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -1151,7 +1151,7 @@ Our Service allows you to post, upload images, share information, and otherwise 
                                         <rect key="frame" x="0.0" y="35" width="375" height="69"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="boC-Ms-4xS" id="f1v-Wp-Ori">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="68"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="What's on your mind?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hek-9m-4rF">
@@ -1177,7 +1177,7 @@ Our Service allows you to post, upload images, share information, and otherwise 
                                         <rect key="frame" x="0.0" y="140" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dgz-v3-M6e" id="zfB-TU-Prq">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3d6-nI-l5k">
