--- a/Peek/Base.lproj/Main.storyboard
+++ b/Peek/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" indicatorStyle="black" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7CA-2J-FIB">
-                                <rect key="frame" x="20" y="98" width="334" height="477"/>
+                                <rect key="frame" x="20" y="71" width="334" height="522"/>
                                 <string key="text">Terms and Conditions
 
 Last updated: January 22nd, 2016
@@ -118,7 +118,14 @@ If you have any questions about these Terms, please contact us at peek app.conta
                             </textView>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gGu-f8-zyu">
                                 <rect key="frame" x="39" y="601" width="297" height="33"/>
-                                <state key="normal" image="accept button"/>
+                                <color key="backgroundColor" red="0.11764705882352941" green="0.84313725490196079" blue="0.37647058823529411" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <state key="normal" title="Accept Terms"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="acceptButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AAZ-p8-1Jo"/>
                                     <segue destination="iE3-Ad-ohV" kind="show" identifier="toPeekView" id="zKO-sg-GNP"/>
@@ -133,15 +140,15 @@ If you have any questions about these Terms, please contact us at peek app.conta
                         </subviews>
                         <color key="backgroundColor" red="0.99019607843137258" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="gGu-f8-zyu" firstAttribute="centerX" secondItem="7CA-2J-FIB" secondAttribute="centerX" id="4XO-Ai-dsj"/>
+                            <constraint firstItem="gGu-f8-zyu" firstAttribute="top" secondItem="7CA-2J-FIB" secondAttribute="bottom" constant="8" symbolic="YES" id="57X-av-cke"/>
+                            <constraint firstItem="7CA-2J-FIB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="4" id="9lS-rp-NUT"/>
                             <constraint firstItem="1wU-MH-IOm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="53" id="9za-5F-Hd3"/>
                             <constraint firstItem="gGu-f8-zyu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BtK-5N-GbC"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="gGu-f8-zyu" secondAttribute="bottom" constant="33" id="Dbu-Tf-vkL"/>
-                            <constraint firstItem="gGu-f8-zyu" firstAttribute="top" secondItem="7CA-2J-FIB" secondAttribute="bottom" constant="26" id="Efh-KS-4Av"/>
                             <constraint firstItem="1wU-MH-IOm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HIc-rh-QWV"/>
                             <constraint firstItem="1wU-MH-IOm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="LLz-re-rRL"/>
-                            <constraint firstItem="7CA-2J-FIB" firstAttribute="top" secondItem="1wU-MH-IOm" secondAttribute="bottom" constant="35" id="Nnr-nx-3ds"/>
-                            <constraint firstItem="7CA-2J-FIB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="4" id="PPp-Hd-jVf"/>
+                            <constraint firstItem="7CA-2J-FIB" firstAttribute="centerX" secondItem="gGu-f8-zyu" secondAttribute="centerX" id="QhO-SC-e3o"/>
+                            <constraint firstItem="7CA-2J-FIB" firstAttribute="top" secondItem="1wU-MH-IOm" secondAttribute="bottom" constant="8" symbolic="YES" id="Tg3-eJ-KEm"/>
                             <constraint firstAttribute="trailingMargin" secondItem="1wU-MH-IOm" secondAttribute="trailing" constant="53" id="dn5-3j-Tfw"/>
                             <constraint firstItem="gGu-f8-zyu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="23" id="zy2-Sz-Xzx"/>
                         </constraints>
@@ -153,7 +160,7 @@ If you have any questions about these Terms, please contact us at peek app.conta
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1798" y="56"/>
+            <point key="canvasLocation" x="1797.5999999999999" y="55.322338830584712"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Xol-zW-ODr">
@@ -1152,7 +1159,7 @@ Our Service allows you to post, upload images, share information, and otherwise 
                                         <rect key="frame" x="0.0" y="35" width="375" height="69"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="boC-Ms-4xS" id="f1v-Wp-Ori">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="68"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="What's on your mind?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hek-9m-4rF">
@@ -1178,7 +1185,7 @@ Our Service allows you to post, upload images, share information, and otherwise 
                                         <rect key="frame" x="0.0" y="140" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dgz-v3-M6e" id="zfB-TU-Prq">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3d6-nI-l5k">
@@ -1231,7 +1238,6 @@ Our Service allows you to post, upload images, share information, and otherwise 
     </scenes>
     <resources>
         <image name="Comment Icon" width="217" height="197"/>
-        <image name="accept button" width="258" height="33"/>
         <image name="camera icon" width="99" height="99"/>
         <image name="location icon" width="34" height="58"/>
         <image name="peek icon with text" width="374" height="138"/>
